--- a/web/index.html
+++ b/web/index.html
@@ -2,19 +2,27 @@
 
 <html>
 <head>
+  <script>
+    // WARNING: DO NOT set the <base href> like this in production!
+    // Details: https://webdev.dartlang.org/angular/guide/router
+    (function () {
+      var m = document.location.pathname.match(/^(\/[-\w]+)+\/web($|\/)/);
+      document.write('<base href="' + (m ? m[0] : '/') + '" />');
+    }());
+  </script>
+  
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="scaffolded-by" content="https://github.com/dart-lang/stagehand">
     <title>bat.institute</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
+    
     <script defer src="main.dart.js"></script>
 </head>
 
 <body>
 
-  <div id="output"></div>
+  <my-app>...loading</my-app>
 
 </body>
 </html>
