--- a/lib/src/dashboard_component.html
+++ b/lib/src/dashboard_component.html
@@ -1,8 +1,8 @@
-<h3>Scariest Bats</h3>
-<div class="grid grid-pad">
-  <div *ngFor="let bat of bats" class="col-1-4"
+<h2>Scariest Bats</h2>
+<div class="grid">
+  <div *ngFor="let bat of bats"
       [routerLink]="batUrl(bat.id)">
-    <div class="module bat">
+    <div class="module">
       <h4>{{bat.name}}</h4>
     </div>
   </div>
