--- a/lib/src/bat_component.html
+++ b/lib/src/bat_component.html
@@ -1,6 +1,6 @@
 <div *ngIf="bat != null">
-  <h2>{{bat.name}}</h2>
-  <div><label>id: </label>{{bat.id}}</div>
+  <h4>{{bat.name}}</h4>
+  <div><label>id: </label>#{{bat.id}}</div>
   <div>
     <label>name: </label>
     <input [(ngModel)]="bat.name" placeholder="name">
