--- a/lib/src/bat_component.html
+++ b/lib/src/bat_component.html
@@ -1,6 +1,7 @@
 <div *ngIf="bat != null">
   <h4>{{bat.name}}</h4>
-  <div><label>id: </label>#{{bat.id}}</div>
+  <div>
+    <label>id: </label>{{bat.id}}</div>
   <div>
     <label>name: </label>
     <input [(ngModel)]="bat.name" placeholder="name">
