--- a/web/index.html
+++ b/web/index.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
-
 <html>
-<head>
-  <script>
-    // WARNING: DO NOT set the <base href> like this in production!
-    // Details: https://webdev.dartlang.org/angular/guide/router
-    (function () {
-      var m = document.location.pathname.match(/^(\/[-\w]+)+\/web($|\/)/);
-      document.write('<base href="' + (m ? m[0] : '/') + '" />');
-    }());
-  </script>
-  
+  <head>
+    <script>
+      // WARNING: DO NOT set the <base href> like this in production!
+      // Details: https://webdev.dartlang.org/angular/guide/router
+      (function () {
+        var m = document.location.pathname.match(/^(\/[-\w]+)+\/web($|\/)/);
+        document.write('<base href="' + (m ? m[0] : '/') + '" />');
+      }());
+    </script>
+
+    <title>Bat Institute</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bat.institute</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="favicon.ico">
-    
+    <link rel="icon" type="image/png" href="favicon.png">
+
     <script defer src="main.dart.js"></script>
-</head>
-
-<body>
-
-  <my-app>...loading</my-app>
-
-</body>
+  </head>
+  <body>
+    <my-app>Loading...</my-app>
+  </body>
 </html>
