--- a/lib/src/bat_list_component.html
+++ b/lib/src/bat_list_component.html
@@ -1,6 +1,8 @@
 <h2>Bats</h2>
 <div>
-  <label>Bat name: </label><input #batName />
+  <div id="add-bat">
+    <label>Bat name:&nbsp;</label><input #batName />
+  </div>
   <button (click)="onAdd(batName.value)">
     Add
   </button>
